--- a/northwind/server/Dockerfile
+++ b/northwind/server/Dockerfile
@@ -21,6 +21,6 @@ RUN npm install
 
 EXPOSE ${APP_PORT}
 
-HEALTHCHECK --interval=60s --timeout=30s --retries=3 CMD curl -f http://localhost:${APP_PORT}/health > /dev/null || exit 1
+HEALTHCHECK --interval=60s --timeout=30s --retries=3 CMD curl -s -f http://localhost:${APP_PORT}/health > /dev/null || exit 1
 
 ENTRYPOINT ["node", "main.js"]
